client/css/main.css
:root {
    --padding: 1rem 5rem;
    --font: sans-serif;
    --shadow: 0 2px 4px 0 rgba(0, 0, 0, .25);
    --hov-shadow: 0 0 3px 3px rgba(66,133,244,.3);
    --header-bg: lightsteelblue;
    --bg: #eeeeee;
}

* {
    font-family: var(--font);
    transition: box-shadow .218s;
}

.error {
    color: darkred;
    font-weight: bold;
}

.pad {
    padding: var(--padding);
}

.hidden {
    display: none;
}

.required:after {
    color: darkred;
    content: '*';
}

body {
    margin: 0;
    background-color: var(--bg);
}

header {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: auto max-content max-content;
    column-gap: 1em;
    align-items: center;
    padding: var(--padding);
    margin: 0;
    background-color: var(--header-bg);
}

header > div, header > a {
    justify-self: end;
}

header a {
    text-decoration: none;
    color: black;
    justify-self: left;
}

header a:hover {
    text-decoration: underline;
}

.signOut {
    color: #757575;
    text-decoration: none;
    padding: 0.5em 2em;
    box-shadow: var(--shadow);
    cursor: pointer;
    background-color: white;
}

.signOut:hover {
    box-shadow: var(--hov-shadow);
}

main {
    padding: var(--padding);
}

section {
    padding: 1em;
    margin: 2em 0;
    background-color: rgba(191, 213, 241, 0.3);
    border-radius: 5px;
    box-shadow: var(--shadow);
}

button {
    padding: 0.3rem;
    box-shadow: var(--shadow);
    cursor: pointer;
}

button:hover {
    box-shadow: var(--hov-shadow);
}

textarea {
    resize: none;
    width: 100%;
}

fieldset {
    margin: 1em 0;
}

.legend-edit {
    width: 100%;
}

.legend-edit label {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: max-content auto;
    column-gap: 1rem;
}

@media (max-width: 520px) {
    :root {
        --padding: 1rem 1rem;
    }

    header {
        grid-template-rows: auto;
        grid-template-columns: 1fr 1fr;
        grid-template-areas: "a a" "b c";
    }

    header h1 {
        grid-area: a;
        justify-self: center;
    }

    header > div, header > a {
        justify-self: center;
    }
}

